# lxqt-globalkeys

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  lxqt-config-globalkeyshortcuts.ts  lxqt-config-globalkeyshortcuts_ar.ts  lxqt-config-globalkeyshortcuts_ca.ts  lxqt-config-globalkeyshortcuts_cs.ts  lxqt-config-globalkeyshortcuts_cs_CZ.ts  lxqt-config-globalkeyshortcuts_da.ts  lxqt-config-globalkeyshortcuts_da_DK.ts  lxqt-config-globalkeyshortcuts_el.ts  lxqt-config-globalkeyshortcuts_es.ts  lxqt-config-globalkeyshortcuts_es_VE.ts  lxqt-config-globalkeyshortcuts_fi.ts  lxqt-config-globalkeyshortcuts_fr.ts  lxqt-config-globalkeyshortcuts_id.ts  lxqt-config-globalkeyshortcuts_ja.ts  lxqt-config-globalkeyshortcuts_lt.ts  lxqt-config-globalkeyshortcuts_lv.ts  lxqt-config-globalkeyshortcuts_nl.ts  lxqt-config-globalkeyshortcuts_pl.ts  lxqt-config-globalkeyshortcuts_pl_PL.ts  lxqt-config-globalkeyshortcuts_pt.ts  lxqt-config-globalkeyshortcuts_pt_BR.ts  lxqt-config-globalkeyshortcuts_ro_RO.ts  lxqt-config-globalkeyshortcuts_sl.ts  lxqt-config-globalkeyshortcuts_th_TH.ts  lxqt-config-globalkeyshortcuts_tr.ts  lxqt-config-globalkeyshortcuts_uk.ts  lxqt-config-globalkeyshortcuts_zh_CN.ts  lxqt-config-globalkeyshortcuts_zh_TW.ts
autostart/: CMakeLists.txt  lxqt-globalkeyshortcuts.desktop  lxqt-globalkeyshortcuts.desktop.in
autostart/translations/: lxqt-globalkeyshortcuts_ar.desktop.yaml  lxqt-globalkeyshortcuts_bg.desktop.yaml  lxqt-globalkeyshortcuts_ca.desktop.yaml  lxqt-globalkeyshortcuts_cs.desktop  lxqt-globalkeyshortcuts_cs.desktop.yaml  lxqt-globalkeyshortcuts_cs_CZ.desktop  lxqt-globalkeyshortcuts_da.desktop  lxqt-globalkeyshortcuts_da.desktop.yaml  lxqt-globalkeyshortcuts_da_DK.desktop  lxqt-globalkeyshortcuts_de.desktop.yaml  lxqt-globalkeyshortcuts_de_DE.desktop  lxqt-globalkeyshortcuts_el.desktop.yaml  lxqt-globalkeyshortcuts_el_GR.desktop  lxqt-globalkeyshortcuts_en_GB.desktop.yaml  lxqt-globalkeyshortcuts_es.desktop  lxqt-globalkeyshortcuts_es.desktop.yaml  lxqt-globalkeyshortcuts_es_VE.desktop  lxqt-globalkeyshortcuts_es_VE.desktop.yaml  lxqt-globalkeyshortcuts_et.desktop.yaml  lxqt-globalkeyshortcuts_eu.desktop  lxqt-globalkeyshortcuts_eu.desktop.yaml  lxqt-globalkeyshortcuts_fi.desktop  lxqt-globalkeyshortcuts_fi.desktop.yaml  lxqt-globalkeyshortcuts_fr.desktop.yaml  lxqt-globalkeyshortcuts_he.desktop.yaml  lxqt-globalkeyshortcuts_hr.desktop.yaml  lxqt-globalkeyshortcuts_hu.desktop.yaml  lxqt-globalkeyshortcuts_it.desktop.yaml  lxqt-globalkeyshortcuts_it_IT.desktop  lxqt-globalkeyshortcuts_ja.desktop.yaml  lxqt-globalkeyshortcuts_ka.desktop.yaml  lxqt-globalkeyshortcuts_kab.desktop.yaml  lxqt-globalkeyshortcuts_kk.desktop.yaml  lxqt-globalkeyshortcuts_ko.desktop.yaml  lxqt-globalkeyshortcuts_lg.desktop.yaml  lxqt-globalkeyshortcuts_lt.desktop.yaml  lxqt-globalkeyshortcuts_nb_NO.desktop.yaml  lxqt-globalkeyshortcuts_nl.desktop.yaml  lxqt-globalkeyshortcuts_oc.desktop.yaml  lxqt-globalkeyshortcuts_pl.desktop.yaml  (+23 more)
client/: CMakeLists.txt  action.cpp  action.h  action_p.h  client.cpp  client.h  client_adaptor.cpp  client_adaptor.h  client_p.h  lxqt-globalkeys.h
cmake/: LxQtTranslate.cmake  create_portable_headers.cmake  lxqt-globalkeys-config.cmake.in  lxqt-globalkeys-ui-config.cmake.in  lxqt_globalkeys-config.cmake.in  lxqt_globalkeys_ui-config.cmake.in  lxqt_globalkeys_ui_use.cmake  lxqt_globalkeys_use.cmake
config/: CMakeLists.txt  actions.cpp  actions.h  default_model.cpp  default_model.h  edit_action_dialog.cpp  edit_action_dialog.h  globalkeyshortcuts.conf  lxqt-config-globalkeyshortcuts.desktop.in  main.cpp  main_window.cpp  main_window.h  main_window.ui  shortcut_selector.cpp  shortcut_selector.h
config/translations/: lxqt-config-globalkeyshortcut_fr_FR.desktop  lxqt-config-globalkeyshortcuts.desktop.yaml  lxqt-config-globalkeyshortcuts.ts  lxqt-config-globalkeyshortcuts_ar.desktop.yaml  lxqt-config-globalkeyshortcuts_ar.ts  lxqt-config-globalkeyshortcuts_arn.ts  lxqt-config-globalkeyshortcuts_ast.ts  lxqt-config-globalkeyshortcuts_bg.desktop.yaml  lxqt-config-globalkeyshortcuts_bg.ts  lxqt-config-globalkeyshortcuts_ca.desktop.yaml  lxqt-config-globalkeyshortcuts_ca.ts  lxqt-config-globalkeyshortcuts_cs.desktop  lxqt-config-globalkeyshortcuts_cs.desktop.yaml  lxqt-config-globalkeyshortcuts_cs.ts  lxqt-config-globalkeyshortcuts_cs_CZ.desktop  lxqt-config-globalkeyshortcuts_cs_CZ.ts  lxqt-config-globalkeyshortcuts_cy.ts  lxqt-config-globalkeyshortcuts_da.desktop  lxqt-config-globalkeyshortcuts_da.desktop.yaml  lxqt-config-globalkeyshortcuts_da.ts  lxqt-config-globalkeyshortcuts_da_DK.desktop  lxqt-config-globalkeyshortcuts_da_DK.ts  lxqt-config-globalkeyshortcuts_de.desktop  lxqt-config-globalkeyshortcuts_de.desktop.yaml  lxqt-config-globalkeyshortcuts_de.ts  lxqt-config-globalkeyshortcuts_de_DE.desktop  lxqt-config-globalkeyshortcuts_el.desktop.yaml  lxqt-config-globalkeyshortcuts_el.ts  lxqt-config-globalkeyshortcuts_el_GR.desktop  lxqt-config-globalkeyshortcuts_en_GB.ts  lxqt-config-globalkeyshortcuts_eo.ts  lxqt-config-globalkeyshortcuts_es.desktop  lxqt-config-globalkeyshortcuts_es.desktop.yaml  lxqt-config-globalkeyshortcuts_es.ts  lxqt-config-globalkeyshortcuts_es_VE.desktop  lxqt-config-globalkeyshortcuts_es_VE.desktop.yaml  lxqt-config-globalkeyshortcuts_es_VE.ts  lxqt-config-globalkeyshortcuts_et.desktop.yaml  lxqt-config-globalkeyshortcuts_et.ts  lxqt-config-globalkeyshortcuts_eu.desktop  (+87 more)
daemon/: CMakeLists.txt  base_action.cpp  base_action.h  client_action.cpp  client_action.h  client_proxy.cpp  client_proxy.h  command_action.cpp  command_action.h  core.cpp  core.h  daemon_adaptor.cpp  daemon_adaptor.h  fixed_timeout.h  log_target.cpp  log_target.h  main.cpp  meta_types.cpp  meta_types.h  method_action.cpp  method_action.h  mutex.cpp  mutex.h  native_adaptor.cpp  native_adaptor.h  pipe_utils.cpp  pipe_utils.h  string_utils.cpp  string_utils.h
ui/: CMakeLists.txt  shortcut_selector.cpp  shortcut_selector.h
xdg/: CMakeLists.txt  globalkeyshortcuts.conf
